--- a/Big_engine.html
+++ b/Big_engine.html
@@ -10,9 +10,10 @@
     <body>
      <a-scene embedded arjs>
         <a-marker preset="hiro">
-            <a-image src="Images/Big Engine AR.png"></a-image>
+            <a-image src="Images/Big Engine AR.png" rotation="270 0 0"></a-image>
+            
         </a-marker>
-        <a-entity camera></a-entity>
+        <a-entity camera ></a-entity>
      </a-scene>
     </body>
 </html>
