--- a/Big_engine.html
+++ b/Big_engine.html
@@ -9,7 +9,7 @@
     </head>
     <body>
      <a-scene embedded arjs>
-        <a-marker preset="hiro">
+        <a-marker type="pattern" patternURL="blob:https://jeromeetienne.github.io/1d0821bd-db2f-477e-a7dc-15f117d75b1a">
             <a-image src="Images/Big Engine AR.png" rotation="270 0 0"></a-image>
             
         </a-marker>
