--- a/AR tour.html
+++ b/AR tour.html
@@ -29,6 +29,7 @@
     <p>This is the page for the Augmented Reality tour of Kelham Island Museum
     </p>
     <a href="Big_engine.html">Big Engine</a>
+    <a href="simplex.html">Mercedes Simplex Car</a>
     </body>
     
 </html>
