--- a/AR viewer.html
+++ b/AR viewer.html
@@ -25,7 +25,7 @@
         
         </div>
     </header>
-    <iFrame id="iframe" style=" width: 100%; height= 100%;"> </iFrame>
+    <iFrame id="iframe" style=" width: 100%; height: 100%;"> </iFrame>
     
     </body>
     <script defer>
