--- a/gas engine.html
+++ b/gas engine.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>#
+<!DOCTYPE html>
 <html>
     <script src="https://aframe.io/releases/0.8.2/aframe.min.js"></script>
     <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.6.2/aframe/build/aframe-ar.js"></script>
