--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             
                 <nav>
                     <ul>
-                 <li ><a href="Index.html" class="navlink">Home</a></li>
+                 <li ><a href="index.html" class="navlink">Home</a></li>
                 <li><a class="navlink" href="AR%20tour.html">AR</a></li>
                 <li><a class="navlink" href="Photo%20Gallery.html">Gallery</a></li>
                 <li><a class="navlink" href="About.html">About</a></li>
