--- a/Photo Gallery.html
+++ b/Photo Gallery.html
@@ -13,7 +13,7 @@
         
        <nav>
         <ul>
-         <li><a class="navlink" href="Index.html">home</a></li>
+         <li><a class="navlink" href="index.html">home</a></li>
         <li><a class="navlink" href="AR%20tour.html">AR</a></li>
         <li><a class="navlink" href="Photo%20Gallery.html">Gallery</a></li>
         <li><a class="navlink" href="About.html">About</a></li>
