--- a/index.html
+++ b/index.html
@@ -47,8 +47,7 @@
     </ul>
     
     <ul>
-    <li class="imglink"><a class="imglink" href="https://twitter.com/KelhamIsland"><img src="Images/Logo.png" width="100px"></a></li>
-    <li class="imglink"><a class="imglink" href="https://twitter.com/KelhamIsland"><img src="Images/Logo.png" width="100px"></a></li>
+    <li><a href="https://twitter.com/KelhamIsland"><img src="Images/twittr.png" width="50px"></a><a href="https://www.facebook.com/kelhamislandmuseum"><img src="Images/facebookr.png" width="50px"></a><a href="https://www.youtube.com/user/KelhamIslandMuseum"><img src="Images/youtuber.png" width="50px"></a></li>
     </ul>
     </footer>
 </html>
