--- a/AR tour.html
+++ b/AR tour.html
@@ -34,5 +34,16 @@
         
     <h4> <a href="AR%20viewer.html?page=gas%20engine.html">Crossly Gas Engine</a> </h4>
     </body>
+     <footer>
+    <ul>
+    <li>Kelham Island</li> 
+    <li>Alma Street</li>
+    <li>Sheffield</li>
+    <li>S3 8RY</li>
+    </ul>
     
+    <ul>
+    <li><a href="https://twitter.com/KelhamIsland"><img src="Images/twittr.png" width="50px"></a><a href="https://www.facebook.com/kelhamislandmuseum"><img src="Images/facebookr.png" width="50px"></a><a href="https://www.youtube.com/user/KelhamIslandMuseum"><img src="Images/youtuber.png" width="50px"></a></li>
+    </ul>
+    </footer>
 </html>
